Finish Website Skeleton #1
Added w3.css, made the website introduction base, added animate.css and used it in animations

--- a/index.html
+++ b/index.html
@@ -4,8 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CrazyRag778 - Nerd with Nothing but Everything</title>
+    <link rel="stylesheet" href="styles/libraries/w3.css">
+    <link rel="stylesheet" href="styles/custom/index-html.css">
+    <link rel="stylesheet" href="styles/libraries/animate.min.css">
 </head>
 <body>
-    
+    <div id="navbar" style="margin:1%;">
+        <div class="w3-bar w3-border w3-round w3-light-grey">
+            <a href="#" class="w3-bar-item w3-button">Home</a>
+            <a href="#" class="w3-bar-item w3-button">Blogs</a>
+            <a href="#" class="w3-bar-item w3-button">Contact</a>
+            <a href="#" class="w3-bar-item w3-button w3-right">E-Mail</a>
+          </div>
+    </div>
+    <div id="intro">
+        <div class="w3-row">
+            <div class="w3-container w3-twothird  animate__animated animate__backInLeft">
+                <h3>A random dude with nothing, but tech and God!</h3>
+                <h1 class="w3-jumbo">CrazyRag778</h1>
+                <br><br>
+                <div class="w3-bar">
+                    <button class="w3-button w3-round w3-blue w3-hover-cyan w3-ripple">Github</button>
+                    <button class="w3-button w3-round w3-red w3-hover-yellow w3-ripple">Feeling Good</button>
+                </div>
+            </div>
+            <div class="w3-container w3-third animate__animated animate__backInRight">
+                <img class="w3-circle" src="https://avatars.githubusercontent.com/u/120187027?v=4" alt="Github Avatar">  
+            </div>
+        </div>        
+    </div>
 </body>
 </html>
