Add Hover Effect to Navbar Items
Added hover effect to all the items in nav bar, Home-Red Blogs-Blue Contact-Green E-Mail-Text (w3)

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 <body>
     <div id="navbar" style="margin:1%;">
         <div class="w3-bar w3-border w3-round w3-light-grey">
-            <a href="#" class="w3-bar-item w3-button">Home</a>
-            <a href="#" class="w3-bar-item w3-button">Blogs</a>
-            <a href="#" class="w3-bar-item w3-button">Contact</a>
-            <a href="#" class="w3-bar-item w3-button w3-right">E-Mail</a>
+            <a href="#" class="w3-bar-item w3-button w3-hover-red">Home</a>
+            <a href="#" class="w3-bar-item w3-button w3-hover-blue">Blogs</a>
+            <a href="#" class="w3-bar-item w3-button w3-hover-green">Contact</a>
+            <a href="#" class="w3-bar-item w3-button w3-right w3-hover-text">E-Mail</a>
           </div>
     </div>
     <div id="intro">
