--- a/index.html
+++ b/index.html
@@ -8,15 +8,16 @@
     <link rel="stylesheet" href="styles/custom/index-html.css">
     <link rel="stylesheet" href="styles/libraries/animate.min.css">
 </head>
-<body>
+<body style="background-color: #242833;" text="white">
     <div id="navbar" style="margin:1%;">
-        <div class="w3-bar w3-border w3-round w3-light-grey">
+        <div class="w3-bar w3-border w3-round" text="white" style="background-color: #242833;">
             <a href="#" class="w3-bar-item w3-button w3-hover-red">Home</a>
             <a href="#" class="w3-bar-item w3-button w3-hover-blue">Blogs</a>
             <a href="#" class="w3-bar-item w3-button w3-hover-green">Contact</a>
             <a href="#" class="w3-bar-item w3-button w3-right w3-hover-text">E-Mail</a>
           </div>
     </div>
+    <br><br>
     <div id="intro">
         <div class="w3-row">
             <div class="w3-container w3-twothird  animate__animated animate__backInLeft">
@@ -33,5 +34,7 @@
             </div>
         </div>        
     </div>
+    <br>
+    <hr style="text-align:left;margin:1%">
 </body>
 </html>
