Add AboutME and TheLegend
Added About Me section and The Legend Section in index.html

--- a/index.html
+++ b/index.html
@@ -36,5 +36,33 @@
     </div>
     <br>
     <hr style="text-align:left;margin:1%">
+    <br>
+    <div style="margin:1%;">
+        <div>
+            <h1>Who "are" I?</h1>
+            <p style="margin-top: -1.5%;">
+                <br>Hey there, internet traveler! I'm Nobody, a code alchemist and digital explorer. When I'm not
+                <br>conjuring up lines of Python or battling bugs, you can find me brewing the perfect cup of coffee or 
+                <br>pondering the mysteries of the universe (and by universe, I mean the Codiverse).
+            </p>  
+        </div>
+    </div>
+    <br>
+    <hr style="text-align:left;margin:1%">
+    <br>
+    <div style="margin:1%">
+        <center>
+            <p class="w3-xxlarge">The Legend of CrazyRag778</p>
+            <p>
+                Once upon a time, in a faraway land known as the World Wide Web, a humble coder emerged.
+                <br>Armed with a keyboard and an insatiable curiosity, CrazyRag778 began a journey through the realms of software development.
+                <br>From the enchanted forests of C++ to the bustling cities of JavaScript,
+                <br>every line of code was yet to written!
+            </p>
+        </center>
+    </div>
+    <br>
+    <hr style="text-align:left;margin:1%">
+    <br>
 </body>
 </html>
