--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <h1 class="w3-jumbo">CrazyRag778</h1>
                 <br><br>
                 <div class="w3-bar">
-                    <button class="w3-button w3-round w3-blue w3-hover-cyan w3-ripple">Github</button>
+                    <a href="https://github.com/CrazyRag778"><button class="w3-button w3-round w3-blue w3-hover-green w3-ripple">Github</button></a>
                     <button class="w3-button w3-round w3-red w3-hover-yellow w3-ripple">Feeling Good</button>
                 </div>
             </div>
