--- a/contact/index.html
+++ b/contact/index.html
@@ -13,7 +13,7 @@
             <a href="../" class="w3-bar-item w3-button w3-hover-red">Home</a>
             <a href="../blog/" class="w3-bar-item w3-button w3-hover-blue">Blogs</a>
             <a href="#" class="w3-bar-item w3-button w3-green">Contact</a>
-            <a href="#" class="w3-bar-item w3-button w3-right w3-hover-text">E-Mail</a>
+            <a href="mailto:dattadibyojit@gmail.com" class="w3-bar-item w3-button w3-right w3-hover-text">E-Mail</a>
           </div>
     </div>
     <div style="margin:1%">
