--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <a href="#" class="w3-bar-item w3-button w3-red">Home</a>
             <a href="blog/" class="w3-bar-item w3-button w3-hover-blue">Blogs</a>
             <a href="contact/" class="w3-bar-item w3-button w3-hover-green">Contact</a>
-            <a href="#" class="w3-bar-item w3-button w3-right w3-hover-text">E-Mail</a>
+            <a href="mailto:dattadibyojit@gmail.com" class="w3-bar-item w3-button w3-right w3-hover-text">E-Mail</a>
           </div>
     </div>
     <br><br>
