--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id="navbar" style="margin:1%;">
         <div class="w3-bar w3-border w3-round" text="white" style="background-color: #242833;">
             <a href="#" class="w3-bar-item w3-button w3-red">Home</a>
-            <a href="blog/" class="w3-bar-item w3-button w3-hover-blue">Blogs</a>
+            <a href="blog/" class="w3-bar-item w3-button w3-hover-blue">Blog</a>
             <a href="contact/" class="w3-bar-item w3-button w3-hover-green">Contact</a>
             <a href="mailto:dattadibyojit@gmail.com" class="w3-bar-item w3-button w3-right w3-hover-text">E-Mail</a>
           </div>
