--- a/contact/index.html
+++ b/contact/index.html
@@ -18,6 +18,35 @@
     </div>
     <div style="margin:1%">
         <h1>Contact ME!</h1>
+        <h3>Have a question, a brilliant idea, or just want to chat? I'd love to hear from you! Here's how you can reach me:</h3>
+        <br>
+        <div>
+            <h2>Send an Email Owl</h2>
+            <p>
+                For those who prefer the magic of email:
+                <ul>
+                    <li>Primary Email: dattadibyojit@gmail.com</li>
+                    <li>Secondary Email: dibyojitdatta@outlook.in</li>
+                </ul>
+                But I would prefer contacting me through my Primary Email.                
+            </p>
+        </div>
+        <br>
+        <div>
+            <h2>Summon me on Discord</h2>
+            <p>
+                Join the conversation or just drop a message
+                Discord: <a href="https://discord.com/users/@CrazyRag778">@crazyrag778</a>
+            </p>
+        </div>
+        <br>
+        <div>
+            <h2>Carrier Pigeon-Friendly Address</h2>
+            <p>
+                Okay, maybe not an actual pigeon, but I'd love to hear from you on other platforms too! (Add any other contact methods you prefer here, like DM, IRC, etc.)
+            </p>
+        </div>
     </div>
+    <br>
 </body>
 </html>
