--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <br><br>
                 <div class="w3-bar">
                     <a href="https://github.com/CrazyRag778"><button class="w3-button w3-round w3-blue w3-hover-green w3-ripple">Github</button></a>
-                    <button class="w3-button w3-round w3-red w3-hover-yellow w3-ripple">Feeling Good</button>
+                    <a href="https://replit.com/@CrazyRag778"><button class="w3-button w3-round w3-red w3-hover-yellow w3-ripple">Replit</button></a>
                 </div>
             </div>
             <div class="w3-container w3-third animate__animated animate__backInRight">
