--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CrazyRag778 - Nerd with Nothing but Everything</title>
+    <link  rel="icon" type="image/x-icon" href="assets/image/favicon.png" />
     <link rel="stylesheet" href="styles/libraries/w3.css">
     <link rel="stylesheet" href="styles/custom/index-html.css">
     <link rel="stylesheet" href="styles/libraries/animate.min.css">
