--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <div class="w3-container w3-twothird  animate__animated animate__backInLeft">
                 <h3>A random dude with nothing, but tech and God!</h3>
                 <h1 class="w3-jumbo">CrazyRag778</h1>
+                <h3>Code Alchemist & Digital Explorer</h3>
                 <br><br>
                 <div class="w3-bar">
                     <a href="https://github.com/CrazyRag778"><button class="w3-button w3-round w3-blue w3-hover-green w3-ripple">Github</button></a>
@@ -34,10 +35,10 @@
             </div>
         </div>        
     </div>
-    <br><br><br>
-    <div style="margin:1%;">
+    <br><br>
+    <div style="margin:1%;" class="w3-left">
         <div>
-            <h1>Who "are" I?</h1>
+            <h1>Welcome to My Digital Lair</h1>
             <p style="margin-top: -1.5%;">
                 <br>Hey there, internet traveler! I'm Nobody, a code alchemist and digital explorer. When I'm not
                 <br>conjuring up lines of Python or battling bugs, you can find me brewing the perfect cup of coffee or 
@@ -45,18 +46,52 @@
             </p>  
         </div>
     </div>
-    <br><br><br>
-    <div style="margin:1%">
-        <center>
-            <p class="w3-xxlarge">The Legend of CrazyRag778</p>
-            <p>
-                Once upon a time, in a faraway land known as the World Wide Web, a humble coder emerged.
-                <br>Armed with a keyboard and an insatiable curiosity, CrazyRag778 began a journey through the realms of software development.
-                <br>From the enchanted forests of C++ to the bustling cities of JavaScript,
-                <br>every line of code was yet to written!
-            </p>
-        </center>
+    <br>
+    <div style="margin:1%" class="w3-right">
+        <p class="w3-xxlarge">About Me</p>
+        <p>
+            Ever wondered what happens when curiosity collides with code? Learn more about my journey,
+            <br>from my humble beginnings as a code newbie to a great learner. Here's a little teaser:
+            <ul>
+                <li>
+                    <b>The Code Journey:</b> My adventure started with a simple "Hello World" and has since evolved into
+                    <br>a quest for coding excellence. From late-night debugging sessions to eureka moments,
+                    <br>it's been a rollercoaster ride.
+                </li>
+                <li>
+                    <b>The Coffee Connection:</b> Coffee isn't just a beverage; it's my coding fuel. Each sip powers my 
+                    <br>brain to solve complex problems and come up with innovative solutions.
+                </li>
+                <li>
+                    <b>The Bookworm:</b> Books are my escape and inspiration. Whether it's a thrilling mystery, a
+                    <br>thought-provoking sci-fi, or a classic novel, I'm always reading something new.
+                </li>
+            </ul>
+        </p>
     </div>
-    <br><br><br>
+    <br>
+    <div style="margin:1%" class="w3-left">
+        <p class="w3-xxlarge">Current Courses & Future Goals</p>
+        <p>
+            I’m constantly learning and growing. Here's what I'm up to right now and what I'm excited about:
+            <ul>
+                <li>
+                    <b>Complete Python Bootcamp by Pierian Data: </b>
+                    <p>
+                        I’m diving deep into Python with Joe Portilla's comprehensive course. It's been an incredible
+                        <br>journey from mastering the basics to tackling more advanced concepts.
+                    </p>
+                </li>
+                <li>
+                    <b>Looking Forward to Harvard’s CS50: </b>
+                    <p>
+                        Next up on my learning journey is Harvard's CS50 course. I’m eager to tackle this challenging
+                        <br>and renowned course to expand my knowledge and skills in computer science.
+                    </p>
+                </li>
+            </ul>
+        </p>
+    </div>
+    <br>
 </body>
 </html>
