Add Images to index.html
Added more Image to index.html, like About ME, Welcome

--- a/index.html
+++ b/index.html
@@ -38,36 +38,50 @@
     <br><br>
     <div style="margin:1%;" class="w3-left">
         <div>
-            <h1>Welcome to My Digital Lair</h1>
-            <p style="margin-top: -1.5%;">
-                <br>Hey there, internet traveler! I'm Nobody, a code alchemist and digital explorer. When I'm not
-                <br>conjuring up lines of Python or battling bugs, you can find me brewing the perfect cup of coffee or 
-                <br>pondering the mysteries of the universe (and by universe, I mean the Codiverse).
-            </p>  
+            <div class="w3-twothird">
+               <h1>Welcome to My Digital Lair</h1>
+                <p style="margin-top: -1.5%;">
+                    <br>Hey there, internet traveler! I'm Nobody, a code alchemist and digital explorer. When I'm not
+                    <br>conjuring up lines of Python or battling bugs, you can find me brewing the perfect cup of coffee or 
+                    <br>pondering the mysteries of the universe (and by universe, I mean the Codiverse).
+                </p>  
+            </div>
+             <div class="w3-third">
+                <img src="assets/image/codiverse-all-lang.png" alt="Codiverse" style="width:90%;height:45%;">
+             </div>
         </div>
     </div>
     <br>
-    <div style="margin:1%" class="w3-right">
-        <p class="w3-xxlarge">About Me</p>
-        <p>
-            Ever wondered what happens when curiosity collides with code? Learn more about my journey,
-            <br>from my humble beginnings as a code newbie to a great learner. Here's a little teaser:
-            <ul>
-                <li>
-                    <b>The Code Journey:</b> My adventure started with a simple "Hello World" and has since evolved into
-                    <br>a quest for coding excellence. From late-night debugging sessions to eureka moments,
-                    <br>it's been a rollercoaster ride.
-                </li>
-                <li>
-                    <b>The Coffee Connection:</b> Coffee isn't just a beverage; it's my coding fuel. Each sip powers my 
-                    <br>brain to solve complex problems and come up with innovative solutions.
-                </li>
-                <li>
-                    <b>The Bookworm:</b> Books are my escape and inspiration. Whether it's a thrilling mystery, a
-                    <br>thought-provoking sci-fi, or a classic novel, I'm always reading something new.
-                </li>
-            </ul>
-        </p>
+    <div style="margin: 1%;" class="">
+        <div class="w3-third">
+            <img src="assets/image/coffee-byte.png" alt="Coffee and Bytes" height="350">
+            
+        </div>
+        <div class="w3-twothird">
+            <div class="w3-right">
+                <p class="w3-xxlarge">About Me</p>
+                <p>
+                    Ever wondered what happens when curiosity collides with code? Learn more about my journey,
+                    <br>from my humble beginnings as a code newbie to a great learner. Here's a little teaser:
+                    <ul>
+                        <li>
+                            <b>The Code Journey:</b> My adventure started with a simple "Hello World" and has since evolved into
+                            <br>a quest for coding excellence. From late-night debugging sessions to eureka moments,
+                            <br>it's been a rollercoaster ride.
+                        </li>
+                        <li>
+                            <b>The Coffee Connection:</b> Coffee isn't just a beverage; it's my coding fuel. Each sip powers my 
+                            <br>brain to solve complex problems and come up with innovative solutions.
+                        </li>
+                        <li>
+                            <b>The Bookworm:</b> Books are my escape and inspiration. Whether it's a thrilling mystery, a
+                            <br>thought-provoking sci-fi, or a classic novel, I'm always reading something new.
+                        </li>
+                    </ul>
+                </p>   
+            </div>
+
+        </div>
     </div>
     <br>
     <div style="margin:1%" class="w3-left">
