Add Image to Current Courses
Added a Comic Panel to the index.html Current Courses Panel

--- a/index.html
+++ b/index.html
@@ -80,31 +80,35 @@
                     </ul>
                 </p>   
             </div>
-
         </div>
     </div>
     <br>
-    <div style="margin:1%" class="w3-left">
-        <p class="w3-xxlarge">Current Courses & Future Goals</p>
-        <p>
-            I’m constantly learning and growing. Here's what I'm up to right now and what I'm excited about:
-            <ul>
-                <li>
-                    <b>Complete Python Bootcamp by Pierian Data: </b>
-                    <p>
-                        I’m diving deep into Python with Joe Portilla's comprehensive course. It's been an incredible
-                        <br>journey from mastering the basics to tackling more advanced concepts.
-                    </p>
-                </li>
-                <li>
-                    <b>Looking Forward to Harvard’s CS50: </b>
-                    <p>
-                        Next up on my learning journey is Harvard's CS50 course. I’m eager to tackle this challenging
-                        <br>and renowned course to expand my knowledge and skills in computer science.
-                    </p>
-                </li>
-            </ul>
-        </p>
+    <div class="w3-container">
+        <div style="margin:1%" class="w3-left w3-twothird">
+            <p class="w3-xxlarge">Current Courses & Future Goals</p>
+            <p>
+                I’m constantly learning and growing. Here's what I'm up to right now and what I'm excited about:
+                <ul>
+                    <li>
+                        <b>Complete Python Bootcamp by Pierian Data: </b>
+                        <p>
+                            I’m diving deep into Python with Joe Portilla's comprehensive course. It's been an incredible
+                            <br>journey from mastering the basics to tackling more advanced concepts.
+                        </p>
+                    </li>
+                    <li>
+                        <b>Looking Forward to Harvard’s CS50: </b>
+                        <p>
+                            Next up on my learning journey is Harvard's CS50 course. I’m eager to tackle this challenging
+                            <br>and renowned course to expand my knowledge and skills in computer science.
+                        </p>
+                    </li>
+                </ul>
+            </p>
+        </div>
+        <div style="margin-top: 5.65%;">
+            <img src="assets/image/never-touch-the-code-of-a-senior-developer-v0-utc872z6adja1.jpg" class="w3-round" alt="Code Comic" height="300" width="300" style="margin-left: 1.5%;">
+        </div>
     </div>
     <br>
 </body>
