--- a/index.html
+++ b/index.html
@@ -17,5 +17,41 @@
             <a href="mailto:dattadibyojit@gmail.com" class="w3-bar-item w3-button w3-right w3-hover-text">E-Mail</a>
           </div>
     </div>
+    <div style="margin:1%;">
+        <table>
+            <tr>
+                <td>
+                    <div>
+                        <img src="https://avatars.githubusercontent.com/u/120187027?v=4" alt="The Nerd you wanna see" height="200" width="200" class="w3-border">
+                        <div class="w3-container w3-center w3-border">
+                            <h6>CrazyRag778</h6>
+                        </div>
+                    </div>
+                </td>
+                <td style="padding:1%">
+                    <h3>About</h3>
+                    <p>
+                        Hello Fellas! I'm CrazyRag778. See I'm nothing more than a regular prograrmmer. I just want to add a <i>Lorem Ipsum</i> in my About Section, but the only problem is that I need to be a bit professional. Still, nothing much in the About Section. Head over to other section's of the website. Feel free to connect via E-mail!
+                    </p>
+                </td>
+                <td>
+                    <div class="w3-border">
+                        <h5>Important Links</h5>
+                        <ul>
+                            <li>
+                                Project
+                                <ul>
+                                    <li>Gitus</li>
+                                    <li>OpenBibleTk</li>
+                                </ul>
+                            </li>
+                            <li>Inspiration</li>
+                            <li>Social</li>
+                        </ul>
+                    </div>
+                </td>
+            </tr>
+        </table>
+    </div>
 </body>
 </html>
